[package]
name = "bloc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elliptic-curve = { version="0.11.12", features=["arithmetic", "jwk", "serde"] }
rand_core = { version="0.6.3", features=["getrandom"] }
getrandom = { version="0.2.5", features=["js"] }
k256 = { version="0.10.4", features = ["ecdsa", "sha256", "serde", "jwk"] }
bitcoin_hashes = "0.10"
serde = { version="1.0.136", features=["derive"] }
chrono = {version="0.4.19", default-features=false, features=["clock", "serde", "wasmbind", "js-sys"]}
bincode = "1.3.3"
log = "0.4.16"
lazy_static = "1.4.0"
wasm-logger = "0.2"
#yew = { git = "https://github.com/yewstack/yew.git", package="yew", features=["tokio"], version = "0.19.3", rev="f9763db7"}
yew = {  version = "0.19.3" }
#yew-router = { git = "https://github.com/yewstack/yew.git", package="yew-router", version="0.16.0", rev="f9763db7"}
yew-router = { version="0.16.0"}
yew-agent = { version="0.1.0"}
web-sys = { version = "0.3.56", features = ["Window", "Response", "HtmlInputElement"] }

